# rustshell

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TODO.md
config/: rustshell.toml
src/: main.rs
src/config/: mod.rs
src/llm/: client.rs  mod.rs  prompts.rs
src/llm/providers/: anthropic.rs  openai.rs
