[package]
name = "rustshell"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
dirs-next = "2.0.0"

# LLM API Integration
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Caching
lru = "0.12"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
